# reef

./: .changelog-reader.json  .gitignore  CHANGELOG.md  README.md  beet.json  main.py  pyproject.toml  requirements.txt
main/: CHANGELOG.md  README.md  beet.json  pyproject.toml
other_packs/reef_summit/: README.md  beet.json  main.py  pyproject.toml
other_packs/reef_summit/src/assets/reef_summit/font/: poppins.json
other_packs/reef_summit/src/assets/reef_summit/modules/: onboarding_demo.bolt  screen_size_tests.bolt
other_packs/reef_summit/src/assets/reef_summit/reef/element/onboarding_demo/: animation_text.json  yellow_gradient.json
other_packs/reef_summit/src/assets/reef_summit/textures/item/reef/animated_graphic/: screen_1.aseprite
other_packs/reef_summit/src/assets/reef_summit/textures/reef/animated_graphic/: animation_text.aseprite
other_packs/reef_summit/src/assets/reef_summit/textures/reef/graphic/: animated_checkerboard_background_336x192.png.mcmeta  animated_checkerboard_background_400x224.aseprite  animated_checkerboard_background_528x288.aseprite  animated_checkerboard_background_528x288.png.mcmeta
other_packs/reef_summit/src/data/reef_summit/modules/: onboarding_demo.bolt
other_packs/reef_summit/src/data/reef_summit/reef/page/onboarding_demo/: animated_graphic_demo.json  element_commands.json  element_commands_demo.json  graphic_element_demo.json  how_to_make.json  intro.json  outro.json  page_commands.json  what_can_reef_do.json  what_is_reef.json
other_packs/reef_summit/src/data/reef_summit/reef/slideshow/: onboarding_demo.json
other_packs/reef_summit/src/data/reef_summit/reef/special/: beet_at_summit.json  java_creators_map_jam.json  reef_google_slides_testing.odp
other_packs/reef_summit/src/data/reef_summit/reef/transition/: blue_slide_up.json  smithed_slide_up.json
(+25 files in other folders)
